--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": 2018,
         "project": "tsconfig.eslint.json"
     },
     "plugins": [
@@ -20,5 +20,8 @@
         "prefer-const": "error",
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-unused-params": "off"
-    }
+    },
+    "overrides": [
+        {"files": ["tests/*"], "env": {"jest": true}}
+    ]
 }
