--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
+  "engines": {
+    "node": ">= 10"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "yarn build --watch --preserveWatchOutput",
@@ -15,9 +18,13 @@
     "yarn": "1.22.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
+    "jest": "^26.6.3",
     "typescript": "^4.2.3"
   }
 }
